--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp maze.cpp path.cpp path_traversal.cpp point.cpp)
 
 add_executable(Maze_solver ${SOURCE_FILES})
