--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 enable_testing()
 
-add_executable(tests test.cpp)
+add_executable(tests path_test.cpp)
 target_link_libraries(tests PRIVATE Maze_solver_lib GTest::gtest_main)
 
 include(GoogleTest)
