final comits after forgetting for a while

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,11 @@
-set(SOURCE_FILES main.cpp maze.cpp path.cpp path_traversal.cpp point.cpp)
+# Main program files
+set(SOURCE_FILES maze.cpp path.cpp path_traversal.cpp point.cpp)
 
+# Create a library with all source files EXCEPT main.cpp
 add_library(Maze_solver_lib ${SOURCE_FILES})
-add_executable(Maze_solver main.cpp)
+target_include_directories(Maze_solver_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
+# Create the main executable with main.cpp
+add_executable(Maze_solver main.cpp)
 target_link_libraries(Maze_solver PRIVATE Maze_solver_lib)
 target_include_directories(Maze_solver PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(Maze_solver_lib PRIVATE ${CMAKE_SOURCE_DIR}/include)
